# pkg/models/comment.go
@@ -12,14 +12,15 @@ type Comment struct {
 	*User     `json:"user"`
 	Text      string           `json:"text"`
 	Children  []Comment        `json:"children"`
-	Rating    int16            `json:"rating"`
+	Rating    *int16           `json:"rating"`
 	CreatedAt *time.Time       `json:"created_at"`
 	UpdatedAt *time.Time       `json:"updated_at"`
-	Medias    []Media          `json:"medias"`
+	Medias    Medias           `json:"medias"`
 	Reactions CommentReactions `json:"reactions"`
+	Deleted   bool             `json:"deleted"`
 }
 
-func NewComment(id int64, user *User, text string, children []Comment, rating int16, created_at *time.Time, updated_at *time.Time, medias []Media, reactions CommentReactions) *Comment {
+func NewComment(id int64, user *User, text string, children []Comment, rating *int16, created_at *time.Time, updated_at *time.Time, medias []Media, reactions CommentReactions, deleted bool) *Comment {
 	return &Comment{
 		id,
 		user,
@@ -30,5 +31,6 @@ func NewComment(id int64, user *User, text string, children []Comment, rating in
 		updated_at,
 		medias,
 		reactions,
+		deleted,
 	}
 }
